--- a/Punto2/statics/css/main.css
+++ b/Punto2/statics/css/main.css
@@ -10,11 +10,17 @@ header, main {
 }
 
 input {
-    border: 5px dotted #999;
+    border: 1px dotted #999;
     border-radius: 0;
-    box-sizing: border-box;
+
+    
     -webkit-appearance: none;
     
+}
+
+label {
+    display:  inline-block;
+    width: 145px;   
 }
 
 form {
@@ -31,17 +37,20 @@ button, input, select {
 
 button {
     border-radius: 5px;
+    width: 153px;
 }
 
-input, select, button {
+input, select{
         
-    width : 150px;
+    width : 160px;
     margin: 0;
 
     -webkit-box-sizing: border-box; /* For legacy WebKit based browsers */
     -moz-box-sizing: border-box; /* For legacy (Firefox <29) Gecko based browsers */
     box-sizing: border-box;
 }
+
+
 
 h1 {
     text-align: center;
