--- a/Punto6y7/statics/css/main.css
+++ b/Punto6y7/statics/css/main.css
@@ -5,8 +5,14 @@ body {
 header, main {
   max-width: 1024px;
   margin: auto;
-  background: white;
+  background: skyblue;
   padding: 10px;
+}
+
+section .datos {
+  border-radius: 25px;
+  background-color: #f2f2f2;
+  padding: 15px;
 }
 
 input {
@@ -19,7 +25,7 @@ input {
 }
 
 label {
-    display:  inline-block;
+    display:  grid;
     width: 145px;   
 }
 
@@ -57,6 +63,17 @@ h1 {
     font-family: "Tahoma"; 
 }
 
+/*tabla*/
+ .seccionPrincipal {
+    padding-left: 3vw;
+   }
+  
+   table, th, td {
+     border: 1px black solid;
+     border-collapse: collapse;
+     padding: 2px 60px;
+   }
+
 
 /* Nav styles */
 
@@ -65,22 +82,23 @@ nav.main-nav ol {
     margin: 0;
     padding: 0;
     width: 200px;
-    background-color: #f1f1f1;
+    background-color: #677273;
+
 }
 
 nav.main-nav ol li a {
   display: block;
   color: #000;
   padding: 8px 16px;
-  text-decoration: none;
+  text-decoration: underline;
 }
 
 nav.main-nav ol li a:hover {
-  background-color: #555;
-  color: white;
+  background-color: #skyblue;
+  color: #2baade;
 }
 
 .active {
-  background-color: #8D9E8D;
-  color: white;
+  background-color: rgb(211, 218, 211);
+  color: #f8f9f3;
 }
